--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <img src='./assests/images/ME.png' class="w3-image" width="200" height="400">
   </header>
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <a href="./Grey Clean CV Resume Photo.pdf" target="_blank">
       <h2 class="w3-text-light-grey" id="resume">My Resume</h2>
-    </a>
     <hr style="width:200px" class="w3-opacity">
     <p>I'm an ALA student learning at ALA ironwood highschool grade 11, i can write code and I'm best at css. I have been learning how to write code for more than 6 month.I'll make sure to keep up my work and done all my work at my best skill.
     </p>
@@ -81,10 +79,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         break thing
       </div>
     </div>
-
+    <a href="./Grey Clean CV Resume Photo.pdf" target="_blank">
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
       <i class="fa fa-download"></i> Download Resume
     </button>
+    </a>
     <h3 class="w3-padding-16 w3-text-light-grey">My Price</h3>
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half w3-margin-bottom">
@@ -135,24 +134,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <hr style="width:200px" class="w3-opacity">
 
     <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> QueenQreek AZ 85140, US</p>
+      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>850 W Combs Rd, Queen Creek,
+        AZ 85140  </p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 714-829-5866</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: ws47389@stu.alaschools.org</p>
-    </div><br>
-    <p>Let's get in touch. Send me a message:</p>
-
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
-  </div>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: <a href="mailto: ws47389@stu.alaschools.org">ws47389@stu.alaschools.org</a></p>
+      
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
